--- a/composer.json
+++ b/composer.json
@@ -8,28 +8,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "barryvdh/laravel-cors": "^0.11.4",
-        "fideloper/proxy": "^4.0",
+        "php": "^7.2.5",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
         "joselfonseca/lighthouse-graphql-passport-auth": "^2.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravel/passport": "^7.4",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "laravel/vapor-core": "^2.2",
         "mll-lab/laravel-graphql-playground": "^1.1",
         "nuwave/lighthouse": "^4.5",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^4.1",
-        "sentry/sentry-laravel": "1.4.1"
+        "sentry/sentry-laravel": "1.7.0"
     },
     "require-dev": {
+        "facade/ignition": "^2.0",
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
